--- a/style.css
+++ b/style.css
@@ -6,11 +6,21 @@ body {
 section {
   display: grid;
   height: 100vh;
-  background: peachpuff;
+  background: #888;
 }
 
 h1 {
   margin: auto;
   font: 3rem Roboto, arial;
-  text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.6);
+  text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.9);
+  animation: pulse 3s infinite alternate both ease-in;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(2);
+  }
 }
