--- a/style.css
+++ b/style.css
@@ -6,14 +6,14 @@ body {
 section {
   display: grid;
   height: 100vh;
-  background: #000;
+  background: coral;
 }
 
 h1 {
   margin: auto;
   font: 3rem Roboto, arial;
   text-shadow: 0px 0px 5px rgba(100, 100, 100, 0.9);
-  color: white;
+  color: bisque;
   animation: pulse 3s infinite alternate both ease-in;
 }
 
